Fix issue with button icon alignment

--- a/packages/css-framework/src/components/_button.scss
+++ b/packages/css-framework/src/components/_button.scss
@@ -74,6 +74,7 @@ $btn-focus-width: 0.2rem;
 }
 
 .rn-btn__icon {
+  display: inline-block;
   margin-left: spacing(2)
 }
 
